get `livro` by name
